# inav

./: .dir-locals.el  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .gitpod.yml  .travis.yml  .vimrc  AGENT.md  AUTHORS  CMakeCache.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  Dockerfile  INS_RC_ORIG_README.md  Makefile  PR_TEST_GUIDE.md  README.md  Vagrantfile  apply_patch.sh  build.sh  build_docker_image.bat  build_docs.sh  build_sitl_mac.sh  custom_config.diff  custom_config.patch  dqd  fake_travis_build.sh  fixed_config.diff  fixwing_PID衰减因子优化实施记录_2026-04-06.md  full_config.diff  inav_2.3.0_OMNIBUSF4NANOV7.hex  inav_9.0.0_SPEEDYBEEF405AIO.hex  install-toolchain.sh  m  my_config.patch  readme.md  redirection  run-docker-compiler-AIRBOTF4.bat  (+5 more)
src/main/: CMakeLists.txt  build_config.c  main.c  main.cpp  main_chibios.c  mw.c  platform.h
src/main/blackbox/: blackbox.c  blackbox.h  blackbox_encoding.c  blackbox_fielddefs.h  blackbox_io.c  blackbox_io.h
src/main/brainfpv/: brainfpv_osd.c  brainfpv_osd.h  fonts.c  fonts.h  images.c  images.h  ir_transponder.c  ir_transponder.h  osd_utils.c  osd_utils.h  video.h  video_quadspi.c
src/main/cms/: cms.c  cms.h  cms_menu_battery.c  cms_menu_battery.h  cms_menu_blackbox.c  cms_menu_blackbox.h  cms_menu_brainfpv.c  cms_menu_brainfpv.h  cms_menu_builtin.c  cms_menu_builtin.h  cms_menu_imu.c  cms_menu_imu.h  cms_menu_ledstrip.c  cms_menu_ledstrip.h  cms_menu_misc.c  cms_menu_mixer_servo.c  cms_menu_mixer_servo.h  cms_menu_navigation.c  cms_menu_navigation.h  cms_menu_osd.c  cms_menu_osd.h  cms_menu_saveexit.c  cms_menu_saveexit.h  cms_menu_vtx.c  cms_menu_vtx.h  cms_menu_vtx_ffpv.c  cms_menu_vtx_ffpv.h  cms_menu_vtx_rtc6705.c  cms_menu_vtx_smartaudio.c  cms_menu_vtx_smartaudio.h  cms_menu_vtx_tramp.c  cms_menu_vtx_tramp.h  cms_types.h
src/main/common/: base.h  bitarray.c  bitarray.h  calibration.c  calibration.h  circular_queue.c  circular_queue.h  colorconversion.h  constants.h  crc.c  crc.h  encoding.c  filter.c  filter.h  fp_pid.c  fp_pid.h  global_functions.c  global_functions.h  global_variables.c  global_variables.h  gps_conversion.c  huffman.c  huffman_table.c  kalman.c  kalman.h  log.c  log.h  logic_condition.c  logic_condition.h  lulu.c  lulu.h  maths.c  maths.h  matrix.h  memory.c  memory.h  olc.c  olc.h  printf.c  printf.h  (+14 more)
src/main/config/: config.c  config.h  config_eeprom.c  config_master.h  config_profile.h  config_streamer.c  config_streamer.h  config_streamer_at32f43x.c  config_streamer_extflash.c  config_streamer_file.c  config_streamer_ram.c  config_streamer_stm32f3.c  config_streamer_stm32f4.c  config_streamer_stm32f7.c  config_streamer_stm32h7.c  custom_defaults.c  custom_defaults.h  feature.c  general_settings.c  general_settings.h  mztc_camera.h  parameter_group.c  parameter_group.h  parameter_group_ids.h  persistent_flags.c  persistent_flags.h  runtime_config.c  runtime_config.h  vtx_table.c  vtx_table.h
src/main/drivers/: 1-wire.c  1-wire.h  accgyro.h  accgyro_adxl345.c  accgyro_bma280.c  accgyro_l3g4200d.c  accgyro_lsm303dlhc.c  accgyro_mma845x.c  accgyro_mpu.c  accgyro_mpu.h  accgyro_mpu3050.c  accgyro_mpu6050.c  accgyro_mpu6500.c  accgyro_mpu6500.h  accgyro_spi_icm20689.c  accgyro_spi_mpu6000.c  accgyro_spi_mpu6000.h  accgyro_spi_mpu6500.c  accgyro_spi_mpu6500.h  accgyro_spi_mpu9250.c  accgyro_spi_mpu9250.h  adc.c  adc.h  adc_at32f43x.c  adc_impl.h  adc_stm32f10x.c  adc_stm32f30x.c  adc_stm32f4xx.c  adc_stm32f7xx.c  adc_stm32h7xx.c  barometer_bmp085.c  barometer_bmp280.c  barometer_ms5611.c  bus.c  bus.h  bus_busdev_i2c.c  bus_busdev_spi.c  bus_busdev_spi.h  bus_hw.c  bus_i2c.h  (+249 more)
src/main/fc/: .gitignore  cli.c  cli.h  config.c  config.h  control_profile.c  control_profile.h  control_profile_config_struct.h  controlrate_profile.c  controlrate_profile.h  controlrate_profile_config_struct.h  fc_core.c  fc_core.h  fc_hardfaults.c  fc_init.c  fc_init.h  fc_mavlink.c  fc_mavlink.h  fc_msp.c  fc_msp.h  fc_msp_box.c  fc_msp_box.h  fc_robot.c  fc_robot.h  fc_tasks.c  fc_tasks.h  firmware_update.c  firmware_update.h  firmware_update_common.c  firmware_update_common.h  heli_curves.c  heli_curves.h  message_bus.c  message_bus.h  motor_locate.c  motor_locate.h  msp_server_fc.c  multifunction.c  multifunction.h  mw.c  (+27 more)
src/main/flight/: adaptive_filter.c  adaptive_filter.h  ahrs.c  ahrs.h  dynamic_gyro_notch.c  dynamic_gyro_notch.h  dynamic_lpf.c  dynamic_lpf.h  est_wind_airspeed.c  est_wind_airspeed.h  ez_tune.c  ez_tune.h  failsafe.c  failsafe.h  flock.c  flock.h  governor.c  governor.h  gyroanalyse.c  gyroanalyse.h  hil.c  imu.c  imu.h  kalman.c  kalman.h  mixer.c  mixer.h  mixer_profile.c  mixer_profile.h  mixer_transition_logic.h  navigation_pos_estimator_clt.c  navigation_pos_estimator_inav.c  navigation_rewrite.c  navigation_rewrite.h  navigation_rewrite_autonomous.c  navigation_rewrite_fixedwing.c  navigation_rewrite_geo.c  navigation_rewrite_multicopter.c  navigation_rewrite_pos_estimator.c  navigation_rewrite_private.h  (+29 more)
src/main/io/: adsb.c  adsb.h  agh_osd.c  agh_osd.h  aoa.h  aoa_msp.c  beeper.c  beeper.h  bf_osd_symbols.h  cms_menu_misc.h  crsf_sensor.c  crsf_sensor.h  dashboard.c  dashboard.h  display.c  display.h  displayport_agh_osd.c  displayport_agh_osd.h  displayport_djiwtf_osd.c  displayport_djiwtf_osd.h  displayport_frsky_osd.c  displayport_frsky_osd.h  displayport_hdzero_osd.c  displayport_hdzero_osd.h  displayport_hott.c  displayport_hott.h  displayport_max7456.c  displayport_max7456.h  displayport_msp.c  displayport_msp.h  displayport_msp_bf_compat.c  displayport_msp_bf_compat.h  displayport_msp_dji_compat.c  displayport_msp_dji_compat.h  displayport_msp_osd.c  displayport_msp_osd.h  displayport_oled.c  displayport_srxl.c  displayport_srxl.h  dji_osd_symbols.h  (+110 more)
src/main/mavlink/: mavlink_command.c  mavlink_command.h  mavlink_guided.c  mavlink_guided.h  mavlink_internal.h  mavlink_mission.c  mavlink_mission.h  mavlink_modes.c  mavlink_modes.h  mavlink_ports.c  mavlink_ports.h  mavlink_routing.c  mavlink_routing.h  (+5 more)
src/test/: CMakeLists.txt  Makefile  mock_msp_gps.py
(+18399 files in other folders)
